
* GITHUB#14109: prefetch may select the wrong memory segment for
  multi-segment slices. (Chris Hegarty)

* GITHUB#14123: SortingCodecReader NPE when segment has no (points, vectors, etc...) (Mike Sokolov)

* GITHUB#14126: Avoid overflow in index input slices invariant checks
  (Chris Hegarty)

* GITHUB#14215: Fix degenerate case in HNSW where all vectors have the same score. (Ben Trent)

Other
---------------------

* GITHUB#14081: Fix urls describing why NIOFS is not recommended for Windows (Marcel Yeonghyeon Ko)

* GITHUB#14116 Use CDL to block threads to avoid flaky tests. (Ao Li)

* GITHUB#14130: Upgrade OpenNLP from 2.3.2 to 2.5.3, which transitively upgrades Slf4j
  from 1.7.36 to 2.0.16. (Michael Froh)

* GITHUB#14223 : Fixed a flaky test TestKnnFloatVectorQuery.testFindFewer (Navneet Verma)

======================= Lucene 10.1.0 =======================

API Changes
---------------------

* GITHUB#13859: Allow open-ended ranges in Intervals range queries. (Mayya Sharipova)

* GITHUB#13950: Make BooleanQuery#getClauses public and add #add(Collection<BooleanClause>) to BQ builder. (Shubham Chaudhary)

* GITHUB#13957: Removed LeafSimScorer class, to save its overhead. Scorers now
  compute scores directly from a SimScorer, postings and norms. (Adrien Grand)

* GITHUB#13998: Add IndexInput::isLoaded to determine if the contents of an
  input is resident in physical memory. (Chris Hegarty)

New Features
---------------------
* GITHUB#14034: Add support for storing term vectors in FeatureField. (Jim Ferenczi)

Improvements
---------------------

* GITHUB#13986: Allow easier configuration of the Panama Vectorization provider with
  newer Java versions. Set the `org.apache.lucene.vectorization.upperJavaFeatureVersion`
  system property to increase the set of Java versions that Panama Vectorization will
  provide optimized implementations for. (Chris Hegarty)

* GITHUB#266: TieredMergePolicy now allows merging up to maxMergeAtOnce